using pipeline class to streamline std ML workflow

--- a/12. streamlining_workflows_through_pipeline.ipynb
+++ b/12. streamlining_workflows_through_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -26,185 +26,92 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Real coffee</th>\n",
-       "      <th>Instant coffee</th>\n",
-       "      <th>Tea</th>\n",
-       "      <th>Sweetener</th>\n",
-       "      <th>Biscuits</th>\n",
-       "      <th>Powder soup</th>\n",
-       "      <th>Tin soup</th>\n",
-       "      <th>Potatoes</th>\n",
-       "      <th>Frozen fish</th>\n",
-       "      <th>Frozen veggies</th>\n",
-       "      <th>Apples</th>\n",
-       "      <th>Oranges</th>\n",
-       "      <th>Tinned fruit</th>\n",
-       "      <th>Jam</th>\n",
-       "      <th>Garlic</th>\n",
-       "      <th>Butter</th>\n",
-       "      <th>Margarine</th>\n",
-       "      <th>Olive oil</th>\n",
-       "      <th>Yoghurt</th>\n",
-       "      <th>Crisp bread</th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "      <th>col4</th>\n",
+       "      <th>col5</th>\n",
+       "      <th>col6</th>\n",
+       "      <th>col7</th>\n",
+       "      <th>col8</th>\n",
+       "      <th>y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>90</td>\n",
-       "      <td>49</td>\n",
-       "      <td>88</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>21</td>\n",
-       "      <td>27</td>\n",
-       "      <td>21</td>\n",
-       "      <td>81</td>\n",
-       "      <td>75</td>\n",
-       "      <td>44</td>\n",
-       "      <td>71</td>\n",
-       "      <td>22</td>\n",
-       "      <td>91</td>\n",
-       "      <td>85</td>\n",
-       "      <td>74</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Italy</td>\n",
-       "      <td>82</td>\n",
-       "      <td>10</td>\n",
-       "      <td>60</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>41</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>67</td>\n",
-       "      <td>71</td>\n",
-       "      <td>9</td>\n",
-       "      <td>46</td>\n",
-       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
        "      <td>66</td>\n",
-       "      <td>24</td>\n",
-       "      <td>94</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>France</td>\n",
-       "      <td>88</td>\n",
-       "      <td>42</td>\n",
-       "      <td>63</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>53</td>\n",
-       "      <td>11</td>\n",
-       "      <td>23</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "      <td>87</td>\n",
-       "      <td>84</td>\n",
-       "      <td>40</td>\n",
-       "      <td>45</td>\n",
-       "      <td>88</td>\n",
-       "      <td>94</td>\n",
-       "      <td>47</td>\n",
-       "      <td>36</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Holland</td>\n",
-       "      <td>96</td>\n",
-       "      <td>62</td>\n",
-       "      <td>98</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>67</td>\n",
-       "      <td>43</td>\n",
-       "      <td>7</td>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>83</td>\n",
+       "      <td>1</td>\n",
        "      <td>89</td>\n",
-       "      <td>61</td>\n",
-       "      <td>81</td>\n",
-       "      <td>15</td>\n",
-       "      <td>31</td>\n",
-       "      <td>97</td>\n",
-       "      <td>13</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>15</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>94</td>\n",
-       "      <td>38</td>\n",
-       "      <td>48</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>37</td>\n",
-       "      <td>23</td>\n",
-       "      <td>9</td>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "      <td>76</td>\n",
-       "      <td>76</td>\n",
-       "      <td>42</td>\n",
-       "      <td>57</td>\n",
-       "      <td>29</td>\n",
-       "      <td>84</td>\n",
-       "      <td>80</td>\n",
-       "      <td>83</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>168</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Country  Real coffee  Instant coffee  Tea  Sweetener  Biscuits  \\\n",
-       "0  Germany           90              49   88       19.0      57.0   \n",
-       "1    Italy           82              10   60        2.0      55.0   \n",
-       "2   France           88              42   63        4.0      76.0   \n",
-       "3  Holland           96              62   98       32.0      62.0   \n",
-       "4  Belgium           94              38   48       11.0      74.0   \n",
-       "\n",
-       "   Powder soup  Tin soup  Potatoes  Frozen fish  Frozen veggies  Apples  \\\n",
-       "0           51        19        21           27              21      81   \n",
-       "1           41         3         2            4               2      67   \n",
-       "2           53        11        23           11               5      87   \n",
-       "3           67        43         7           14              14      83   \n",
-       "4           37        23         9           13              12      76   \n",
-       "\n",
-       "   Oranges  Tinned fruit  Jam  Garlic  Butter  Margarine  Olive oil  Yoghurt  \\\n",
-       "0       75            44   71      22      91         85         74     30.0   \n",
-       "1       71             9   46      80      66         24         94      5.0   \n",
-       "2       84            40   45      88      94         47         36     57.0   \n",
-       "3       89            61   81      15      31         97         13     53.0   \n",
-       "4       76            42   57      29      84         80         83     20.0   \n",
-       "\n",
-       "   Crisp bread  \n",
-       "0           26  \n",
-       "1           18  \n",
-       "2            3  \n",
-       "3           15  \n",
-       "4            5  "
+       "   col1  col2  col3  col4  col5  col6   col7  col8  y\n",
+       "0     6   148    72    35     0  33.6  0.627    50  1\n",
+       "1     1    85    66    29     0  26.6  0.351    31  0\n",
+       "2     8   183    64     0     0  23.3  0.672    32  1\n",
+       "3     1    89    66    23    94  28.1  0.167    21  0\n",
+       "4     0   137    40    35   168  43.1  2.288    33  1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,69 +120,130 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('./datasets/food-consumption.csv')\n",
+    "df = pd.read_csv('./datasets/diabetes.csv')\n",
     "pd.set_option('display.max_columns', df.shape[1])\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Country           0\n",
-       "Real coffee       0\n",
-       "Instant coffee    0\n",
-       "Tea               0\n",
-       "Sweetener         1\n",
-       "Biscuits          1\n",
-       "Powder soup       0\n",
-       "Tin soup          0\n",
-       "Potatoes          0\n",
-       "Frozen fish       0\n",
-       "Frozen veggies    0\n",
-       "Apples            0\n",
-       "Oranges           0\n",
-       "Tinned fruit      0\n",
-       "Jam               0\n",
-       "Garlic            0\n",
-       "Butter            0\n",
-       "Margarine         0\n",
-       "Olive oil         0\n",
-       "Yoghurt           1\n",
-       "Crisp bread       0\n",
-       "dtype: int64"
+       "0         Onset\n",
+       "1      No-Onset\n",
+       "2         Onset\n",
+       "3      No-Onset\n",
+       "4         Onset\n",
+       "         ...   \n",
+       "763    No-Onset\n",
+       "764    No-Onset\n",
+       "765    No-Onset\n",
+       "766       Onset\n",
+       "767    No-Onset\n",
+       "Name: y, Length: 768, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Checking the presence and count of null values:\n",
-    "df.isnull().sum()"
+    "# Creating a mapping\n",
+    "target_mapping = {\n",
+    "    0: 'No-Onset',\n",
+    "    1: 'Onset'\n",
+    "}\n",
+    "\n",
+    "df['y'] = df['y'].map(target_mapping)\n",
+    "df['y']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.iloc[:, 1:]\n",
-    "y = df.iloc[:, 0]"
+    "X = df.iloc[:, :df.shape[1] - 1].values   \n",
+    "y = df.iloc[:, df.shape[1] - 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "le.transform(['No-Onset', 'Onset'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, stratify=y, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "pipe_lr = make_pipeline(\n",
+    "    StandardScaler(),\n",
+    "    SimpleImputer(missing_values=0, strategy='mean'),\n",
+    "    PCA(n_components=8),\n",
+    "    LogisticRegression(random_state=1, solver='lbfgs')\n",
+    ")\n",
+    "\n",
+    "pipe_lr.fit(X_train, y_train)\n",
+    "print(f'Accuracy: {round(pipe_lr.score(X_test, y_test), 1)}')"
+   ]
   }
  ],
  "metadata": {
