--- a/pre_processing_and_classification_problem/pre_processing_and_classification.ipynb
+++ b/pre_processing_and_classification_problem/pre_processing_and_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,61 +36,61 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>Unnamed: 9</th>\n",
-       "      <th>Unnamed: 10</th>\n",
-       "      <th>Unnamed: 11</th>\n",
-       "      <th>Unnamed: 12</th>\n",
-       "      <th>Unnamed: 13</th>\n",
-       "      <th>Unnamed: 14</th>\n",
-       "      <th>Unnamed: 15</th>\n",
-       "      <th>Unnamed: 16</th>\n",
-       "      <th>Unnamed: 17</th>\n",
-       "      <th>Unnamed: 18</th>\n",
-       "      <th>Unnamed: 19</th>\n",
-       "      <th>Unnamed: 20</th>\n",
-       "      <th>Unnamed: 21</th>\n",
-       "      <th>Unnamed: 22</th>\n",
-       "      <th>Unnamed: 23</th>\n",
-       "      <th>Unnamed: 24</th>\n",
-       "      <th>Unnamed: 25</th>\n",
-       "      <th>Unnamed: 26</th>\n",
-       "      <th>Unnamed: 27</th>\n",
-       "      <th>Unnamed: 28</th>\n",
-       "      <th>Unnamed: 29</th>\n",
-       "      <th>Unnamed: 30</th>\n",
-       "      <th>Unnamed: 31</th>\n",
-       "      <th>Unnamed: 32</th>\n",
-       "      <th>Unnamed: 33</th>\n",
-       "      <th>Unnamed: 34</th>\n",
-       "      <th>Unnamed: 35</th>\n",
-       "      <th>Unnamed: 36</th>\n",
-       "      <th>Unnamed: 37</th>\n",
-       "      <th>Unnamed: 38</th>\n",
-       "      <th>Unnamed: 39</th>\n",
-       "      <th>Unnamed: 40</th>\n",
-       "      <th>Unnamed: 41</th>\n",
-       "      <th>Unnamed: 42</th>\n",
-       "      <th>Unnamed: 43</th>\n",
-       "      <th>Unnamed: 44</th>\n",
-       "      <th>Unnamed: 45</th>\n",
-       "      <th>Unnamed: 46</th>\n",
-       "      <th>Unnamed: 47</th>\n",
-       "      <th>Unnamed: 48</th>\n",
-       "      <th>Unnamed: 49</th>\n",
-       "      <th>Unnamed: 50</th>\n",
-       "      <th>Unnamed: 51</th>\n",
-       "      <th>Unnamed: 52</th>\n",
-       "      <th>Unnamed: 53</th>\n",
-       "      <th>Unnamed: 54</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "      <th>31</th>\n",
+       "      <th>32</th>\n",
+       "      <th>33</th>\n",
+       "      <th>34</th>\n",
+       "      <th>35</th>\n",
+       "      <th>36</th>\n",
+       "      <th>37</th>\n",
+       "      <th>38</th>\n",
+       "      <th>39</th>\n",
+       "      <th>40</th>\n",
+       "      <th>41</th>\n",
+       "      <th>42</th>\n",
+       "      <th>43</th>\n",
+       "      <th>44</th>\n",
+       "      <th>45</th>\n",
+       "      <th>46</th>\n",
+       "      <th>47</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "      <th>54</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -389,98 +389,49 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed  Unnamed: 1  Unnamed: 2  Unnamed: 3  Unnamed: 4  Unnamed: 5  \\\n",
-       "0     2596          51           3         258           0         510   \n",
-       "1     2590          56           2         212          -6         390   \n",
-       "2     2804         139           9         268          65        3180   \n",
-       "3     2785         155          18         242         118        3090   \n",
-       "4     2595          45           2         153          -1         391   \n",
+       "     0    1   2    3    4     5    6    7    8     9   10  11  12  13  14  15  \\\n",
+       "0  2596   51   3  258    0   510  221  232  148  6279   1   0   0   0   0   0   \n",
+       "1  2590   56   2  212   -6   390  220  235  151  6225   1   0   0   0   0   0   \n",
+       "2  2804  139   9  268   65  3180  234  238  135  6121   1   0   0   0   0   0   \n",
+       "3  2785  155  18  242  118  3090  238  238  122  6211   1   0   0   0   0   0   \n",
+       "4  2595   45   2  153   -1   391  220  234  150  6172   1   0   0   0   0   0   \n",
        "\n",
-       "   Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  Unnamed: 10  Unnamed: 11  \\\n",
-       "0         221         232         148        6279            1            0   \n",
-       "1         220         235         151        6225            1            0   \n",
-       "2         234         238         135        6121            1            0   \n",
-       "3         238         238         122        6211            1            0   \n",
-       "4         220         234         150        6172            1            0   \n",
+       "   16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  \\\n",
+       "0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   \n",
+       "1   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   \n",
+       "2   0   0   0   0   0   0   0   0   0   1   0   0   0   0   0   0   0   0   0   \n",
+       "3   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   \n",
+       "4   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   \n",
        "\n",
-       "   Unnamed: 12  Unnamed: 13  Unnamed: 14  Unnamed: 15  Unnamed: 16  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
+       "   35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  \\\n",
+       "0   0   0   0   0   0   0   0   1   0   0   0   0   0   0   0   0   0   0   0   \n",
+       "1   0   0   0   0   0   0   0   1   0   0   0   0   0   0   0   0   0   0   0   \n",
+       "2   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   \n",
+       "3   0   0   0   0   0   0   0   0   1   0   0   0   0   0   0   0   0   0   0   \n",
+       "4   0   0   0   0   0   0   0   1   0   0   0   0   0   0   0   0   0   0   0   \n",
        "\n",
-       "   Unnamed: 17  Unnamed: 18  Unnamed: 19  Unnamed: 20  Unnamed: 21  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 22  Unnamed: 23  Unnamed: 24  Unnamed: 25  Unnamed: 26  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            1            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 27  Unnamed: 28  Unnamed: 29  Unnamed: 30  Unnamed: 31  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 32  Unnamed: 33  Unnamed: 34  Unnamed: 35  Unnamed: 36  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 37  Unnamed: 38  Unnamed: 39  Unnamed: 40  Unnamed: 41  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 42  Unnamed: 43  Unnamed: 44  Unnamed: 45  Unnamed: 46  \\\n",
-       "0            1            0            0            0            0   \n",
-       "1            1            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            1            0            0            0   \n",
-       "4            1            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 47  Unnamed: 48  Unnamed: 49  Unnamed: 50  Unnamed: 51  \\\n",
-       "0            0            0            0            0            0   \n",
-       "1            0            0            0            0            0   \n",
-       "2            0            0            0            0            0   \n",
-       "3            0            0            0            0            0   \n",
-       "4            0            0            0            0            0   \n",
-       "\n",
-       "   Unnamed: 52  Unnamed: 53  Unnamed: 54  \n",
-       "0            0            0            5  \n",
-       "1            0            0            5  \n",
-       "2            0            0            2  \n",
-       "3            0            0            2  \n",
-       "4            0            0            5  "
+       "   54  \n",
+       "0   5  \n",
+       "1   5  \n",
+       "2   2  \n",
+       "3   2  \n",
+       "4   5  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('covtype.csv')\n",
+    "df = pd.read_csv('covtype.data', header=None)\n",
     "pd.set_option('display.max_columns', len(df.columns))\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +954,7 @@
        "4             0             0           5  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
