--- a/pre_processing_and_classification_problem/pre_processing_and_classification.ipynb
+++ b/pre_processing_and_classification_problem/pre_processing_and_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "4   5  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,11 +431,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_types = ['Soil Type {}'.format(i) for i in range(1, 41)]\n",
     "cover_types = [\n",
     "    'Spruce/Fir',\n",
     "    'Lodgepole Pine',\n",
@@ -463,22 +462,14 @@
     "    'Cache la Poudre Wilderness Area',\n",
     "]\n",
     "\n",
+    "soil_types = ['Soil Type {}'.format(i) for i in range(1, 41)]\n",
     "col_names.extend(soil_types)\n",
     "col_names.append('Cover Type')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns = col_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -954,18 +945,19 @@
        "4             0             0           5  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.columns = col_names\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +966,7 @@
        "(581012, 55)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1049,28 +1041,134 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Displaying if there are any missing values \n",
+    "\n",
     "(df == None).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Elevation Quantitative                0\n",
+       "Aspect Azimuth Aspect                 0\n",
+       "Slope Degrees                         0\n",
+       "Horizontal_Distance_To_Hydrology      0\n",
+       "Vertical_Distance_To_Hydrology        0\n",
+       "Horizontal_Distance_To_Roadways       0\n",
+       "Hillshade_9am                         0\n",
+       "Hillshade_Noon                        0\n",
+       "Hillshade_3pm                         0\n",
+       "Horizontal_Distance_To_Fire_Points    0\n",
+       "Rawah Wilderness Area                 0\n",
+       "Neota Wilderness Area                 0\n",
+       "Comanche Peak Wilderness Area         0\n",
+       "Cache la Poudre Wilderness Area       0\n",
+       "Soil Type 1                           0\n",
+       "Soil Type 2                           0\n",
+       "Soil Type 3                           0\n",
+       "Soil Type 4                           0\n",
+       "Soil Type 5                           0\n",
+       "Soil Type 6                           0\n",
+       "Soil Type 7                           0\n",
+       "Soil Type 8                           0\n",
+       "Soil Type 9                           0\n",
+       "Soil Type 10                          0\n",
+       "Soil Type 11                          0\n",
+       "Soil Type 12                          0\n",
+       "Soil Type 13                          0\n",
+       "Soil Type 14                          0\n",
+       "Soil Type 15                          0\n",
+       "Soil Type 16                          0\n",
+       "Soil Type 17                          0\n",
+       "Soil Type 18                          0\n",
+       "Soil Type 19                          0\n",
+       "Soil Type 20                          0\n",
+       "Soil Type 21                          0\n",
+       "Soil Type 22                          0\n",
+       "Soil Type 23                          0\n",
+       "Soil Type 24                          0\n",
+       "Soil Type 25                          0\n",
+       "Soil Type 26                          0\n",
+       "Soil Type 27                          0\n",
+       "Soil Type 28                          0\n",
+       "Soil Type 29                          0\n",
+       "Soil Type 30                          0\n",
+       "Soil Type 31                          0\n",
+       "Soil Type 32                          0\n",
+       "Soil Type 33                          0\n",
+       "Soil Type 34                          0\n",
+       "Soil Type 35                          0\n",
+       "Soil Type 36                          0\n",
+       "Soil Type 37                          0\n",
+       "Soil Type 38                          0\n",
+       "Soil Type 39                          0\n",
+       "Soil Type 40                          0\n",
+       "Cover Type                            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = df.drop(columns=['Cover Type'])\n",
-    "y = df['Cover Type']"
+    "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(columns=['Cover Type']).values\n",
+    "y = df['Cover Type'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lodgepole Pine    283301\n",
+       "Spruce/Fir        211840\n",
+       "Ponderosa Pine     35754\n",
+       "Krummholz          20510\n",
+       "Douglas-fir        17367\n",
+       "Aspen               9493\n",
+       "Cottonwood          2747\n",
+       "Name: Cover Type, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inv_target_mapping = {(idx + 1): target for idx, target in enumerate(cover_types)}\n",
+    "df['Cover Type'] = df['Cover Type'].map(inv_target_mapping)\n",
+    "df['Cover Type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,16 +1178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9340520011015238"
+       "0.9346543969157334"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1124,10 +1222,10 @@
     {
      "data": {
       "text/plain": [
-       "0.6197620249678722"
+       "0.6211848265100055"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
