--- a/13. k_fold_cross_validation.ipynb
+++ b/13. k_fold_cross_validation.ipynb
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipe_lr = make_pipeline(\n",
+    "pipe_lr = make_pipeline (\n",
     "    StandardScaler(),\n",
     "    PCA(n_components=3),\n",
     "    LogisticRegression()\n",
@@ -262,23 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 1 [256 153] 0.8913043478260869\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 2 [256 153] 0.9565217391304348\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 3 [256 153] 0.9782608695652174\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 4 [256 153] 0.9347826086956522\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 5 [256 153] 0.8695652173913043\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 6 [257 153] 0.9777777777777777\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 7 [257 153] 0.9333333333333333\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 8 [257 153] 0.9333333333333333\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 9 [257 153] 0.9777777777777777\n",
-      "Fold %2d, Class dist: %s, Validation Acc: %3d 10 [257 153] 0.9555555555555556\n"
+      "Fold:  1, Class dist: [256 153], Validation Acc: 0.89\n",
+      "Fold:  2, Class dist: [256 153], Validation Acc: 0.96\n",
+      "Fold:  3, Class dist: [256 153], Validation Acc: 0.98\n",
+      "Fold:  4, Class dist: [256 153], Validation Acc: 0.93\n",
+      "Fold:  5, Class dist: [256 153], Validation Acc: 0.87\n",
+      "Fold:  6, Class dist: [257 153], Validation Acc: 0.98\n",
+      "Fold:  7, Class dist: [257 153], Validation Acc: 0.93\n",
+      "Fold:  8, Class dist: [257 153], Validation Acc: 0.93\n",
+      "Fold:  9, Class dist: [257 153], Validation Acc: 0.98\n",
+      "Fold: 10, Class dist: [257 153], Validation Acc: 0.96\n"
      ]
     }
    ],
@@ -296,8 +296,24 @@
     "    pipe_lr.fit(X_train[train], y_train[train])\n",
     "    score = pipe_lr.score(X_train[val], y_train[val])\n",
     "    scores.append(score)\n",
-    "    print('Fold %2d, Class dist: %s, Validation Acc: %3d', \n",
-    "    (iteration+1), np.bincount(y_train[train]), score)"
+    "    print('Fold: %2d, Class dist: %s, Validation Acc: %.2f' % (iteration+1, np.bincount(y_train[train]), score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Accuracy: 0.941 +/- 0.0350\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Average Accuracy: %.3f +/- %.4f' % (np.mean(scores), np.std(scores)))"
    ]
   },
   {
@@ -305,7 +321,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# K-fold cross validation scorer:\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score (\n",
+    "    estimator=pipe_lr,\n",
+    "    \n",
+    ")"
+   ]
   }
  ],
  "metadata": {
