kfold cross validation and kfold scorer

--- a/13. kfold_cross_validation.ipynb
+++ b/13. kfold_cross_validation.ipynb
@@ -318,17 +318,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV Scores: [0.89130435 0.95652174 0.97826087 0.93478261 0.86956522 0.97777778\n",
+      " 0.93333333 0.93333333 0.97777778 0.95555556]\n"
+     ]
+    }
+   ],
    "source": [
     "# K-fold cross validation scorer:\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "scores = cross_val_score (\n",
     "    estimator=pipe_lr,\n",
-    "    \n",
-    ")"
+    "    X=X_train,\n",
+    "    y=y_train,\n",
+    "    cv=10,\n",
+    "    n_jobs=2\n",
+    ")\n",
+    "\n",
+    "print('CV Scores: %s' % (scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Accuracy: 0.941 +/- 0.0350\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Average Accuracy: %.3f +/- %.4f' % (np.mean(scores), np.std(scores)))\n",
+    "\n",
+    "# An extremely useful feature of Kfold cross validation scorer is that we can evaluate the performance\n",
+    "# of different folds accross multiple CPU's on our machine by specify the number of cores as an argument\n",
+    "# to the parameter n_jobs"
    ]
   }
  ],
