randomly printing a sentence with its sentiment

--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -174,10 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: @LegalCookie No, you ninny. It's supposed to work with a PC. Dont make fun of me bc I'm Macless \n",
+      "Sentiment: Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "sentiments = {0: 'Negative', 1: 'Neutral', 4: 'Positive'}\n",
+    "random_sentence_idx = random.randint(0, df.shape[0])\n",
+    "\n",
+    "print(f'Sentence: {df.iloc[random_sentence_idx, 5]}')\n",
+    "print(f'Sentiment: {sentiments[df.iloc[random_sentence_idx, 0]]}')"
+   ]
   }
  ],
  "metadata": {
