pre_processing text

--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -174,15 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentence: @LegalCookie No, you ninny. It's supposed to work with a PC. Dont make fun of me bc I'm Macless \n",
-      "Sentiment: Negative\n"
+      "Sentence: It has to be said that @dobbie31 manages to make the crappiest of evenings feel OK \n",
+      "Sentiment: Positive\n"
      ]
     }
    ],
@@ -190,9 +190,11 @@
     "import random\n",
     "sentiments = {0: 'Negative', 1: 'Neutral', 4: 'Positive'}\n",
     "random_sentence_idx = random.randint(0, df.shape[0])\n",
+    "random_sentence = df.iloc[random_sentence_idx, 5]\n",
+    "sentence_sentiment = sentiments[df.iloc[random_sentence_idx, 0]]\n",
     "\n",
-    "print(f'Sentence: {df.iloc[random_sentence_idx, 5]}')\n",
-    "print(f'Sentiment: {sentiments[df.iloc[random_sentence_idx, 0]]}')"
+    "print(f'Sentence: {random_sentence}')\n",
+    "print(f'Sentiment: {sentence_sentiment}')"
    ]
   },
   {
@@ -215,6 +217,38 @@
     "stopwords = stopwords.words('english')\n",
     "print('ALL STOPWORDS:\\n')\n",
     "print(stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thought this indeed remarkable contribution\n",
+      "said dobbie31 manages make crappiest evenings feel ok \n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "def pre_process_text(text):\n",
+    "    # Converting the text to lowercase first\n",
+    "    text = text.lower()\n",
+    "    # Removing stopwords\n",
+    "    words = text.split(' ')\n",
+    "    words = [word for word in words if word not in stopwords]\n",
+    "    text = \" \".join(words)\n",
+    "    # Removing punctuation\n",
+    "    return \"\".join(char for char in text if char not in string.punctuation)\n",
+    "\n",
+    "# Testing our preprocessing function \n",
+    "print(pre_process_text(\"I hadn't thought about this this. This is indeed a remarkable contribution.....\"))\n",
+    "print(pre_process_text(random_sentence))"
    ]
   },
   {
