applying pre_processing to all the sentences

--- a/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
+++ b/sentiment_analysis_using_pre-trained_models_and_word_embeddings/sentiment_analysis_from_scratch.ipynb
@@ -188,6 +188,12 @@
    ],
    "source": [
     "import random\n",
+    "\n",
+    "'''\n",
+    "    Printing a random sentence from the dataset along with its sentiment. \n",
+    "    # (Run the cell again, to generate new sentence each time)\n",
+    "'''\n",
+    "\n",
     "sentiments = {0: 'Negative', 1: 'Neutral', 4: 'Positive'}\n",
     "random_sentence_idx = random.randint(0, df.shape[0])\n",
     "random_sentence = df.iloc[random_sentence_idx, 5]\n",
@@ -249,6 +255,63 @@
     "# Testing our preprocessing function \n",
     "print(pre_process_text(\"I hadn't thought about this this. This is indeed a remarkable contribution.....\"))\n",
     "print(pre_process_text(random_sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          switchfoot httptwitpiccom2y1zl  awww thats bum...\n",
+       "1          upset cant update facebook texting it might cr...\n",
+       "2          kenichan dived many times ball managed save 50...\n",
+       "3                          whole body feels itchy like fire \n",
+       "4          nationwideclass no behaving all im mad here ca...\n",
+       "                                 ...                        \n",
+       "1599995                    woke up school best feeling ever \n",
+       "1599996    thewdbcom  cool hear old walt interviews  â« ...\n",
+       "1599997                     ready mojo makeover ask details \n",
+       "1599998    happy 38th birthday boo alll time tupac amaru ...\n",
+       "1599999    happy charitytuesday thenspcc sparkscharity sp...\n",
+       "Name: 5, Length: 1600000, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let us apply our preprocessing function to all of the sentences in our dataset\n",
+    "df[5] = df[5].apply(pre_process_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    switchfoot httptwitpiccom2y1zl  awww thats bum...\n",
+       "1    upset cant update facebook texting it might cr...\n",
+       "2    kenichan dived many times ball managed save 50...\n",
+       "3                    whole body feels itchy like fire \n",
+       "4    nationwideclass no behaving all im mad here ca...\n",
+       "Name: 5, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[5].head(5)"
    ]
   },
   {
